# prismo

./: .gitignore  LICENSE  README.md  build.ini  meson.build  ola.json  todo  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci-meson.yml
config/workload/: nop.json  zipf_fsync.json
include/common/: metadata.hpp  operation.h  percentile.h  percentile.hpp  trace.h  trace.hpp
include/generator/: compression.h  deduplication.h  synthetic.h
include/parser/: parser.h
include/worker/: producer.h
monitor/: .env.example  campaign.sh  docker-compose.yml
monitor/nginx/: default.conf
monitor/prometheus/: prometheus.yml
report/: acronyms.yml  bibliography.yml  main.typ
report/chapters/: architecture.typ  background.typ  introduction.typ  relatedwork.typ
report/preamble/: abstract.typ
scripts/: dedup.py  dedup_analysis.py  distribution.py  offset_analysis.py  overtime.py  parser.py  requirements.txt
src/: main.cpp
src/access/: access.cpp  random.cpp  sequential.cpp  zipfian.cpp
src/communication/: channel.cpp
src/engine/: aio.cpp  config.cpp  engine.cpp  posix.cpp  spdk.cpp  uring.cpp  utils.cpp
src/factory/: factory.cpp
src/generator/: deduplication.cpp
src/io/: statistics.cpp
src/logger/: logger.cpp  spdlog.cpp
src/metric/: statistics.cpp
src/operation/: barrier.cpp  constant.cpp  percentage.cpp  sequence.cpp
src/parser/: factory.cpp  parser.cpp
src/worker/: consumer.cpp  job_manager.cpp  producer.cpp
tools/astroide/: README.md  main.cpp  meson.build
tools/campaign/: Cargo.toml
tools/cardoide/: Cargo.toml  README.md
tools/deltoide/: README.md  data.h  data.hpp  main.cpp  meson.build  normalizer.h
tools/pcp-dstat/: common.sh  fio.sh  prismo.sh  runner.sh  vdbench.sh
tools/scripts/: .gitignore  README.md  campaign.py  dedup.py  distribution.py  dstat_plots.py  extract_report_json.py  fio_parser.py  fio_plots.py  overtime.py  parser.py  plot_style.py  prismo_dedup.py  prismo_log_parser.py  prismo_log_plots.py  prismo_plots.py  pyproject.toml  run_campaign.sh  summarize_campaign.py  vdbench_parser.py  vdbench_plots.py
tools/trace-parser/: main.cpp  meson.build
workloads/: README.md  config.json  rwmix.json  wseq.json  zipf.json
workloads/bdev/: malloc_bdev.json  nvme_bdev.json
workloads/campaign/: 01_nop_baseline_posix.json  01_nop_seq_const_posix.json  02_write_seq_const.json  02_write_seq_const_posix.json  03_rw_random_random.json  03_rw_random_random_posix.json  03_seq_write_posix.json  04_rand_read_posix.json  04_rw_zipf_random_posix.json  05_rw_rand_mixed_posix.json  05_seq_barrier_fsync_posix.json  06_zipf_dedup_posix.json  07_trace_all_posix.json  08_read_seq_const.json  08_read_seq_const_posix.json  08_seq_write_large_block_posix.json  09_barrier_fsync_posix.json  09_read_random_random.json  09_read_random_random_posix.json  10_write_heavy_seq_posix.json  11_read_heavy_zipf.json  11_read_heavy_zipf_posix.json  12_dedup_zipf_posix.json  12_write_seq_large_block_posix.json  13_hybrid_trace_access_posix.json  13_rw_random_multijob.json  13_rw_random_multijob_posix.json  14_fdatasync_barrier_zipf.json  14_fdatasync_barrier_zipf_posix.json  14_hybrid_trace_ops_posix.json  15_all_ops_random.json  15_all_ops_random_posix.json  16_dedup_heavy_barrier.json  16_dedup_heavy_barrier_posix.json  16_trace_webmail_posix.json  17_nop_baseline_uring.json  17_runtime_mixed_random.json  17_runtime_mixed_random_posix.json  18_multijob_dedup_barrier.json  18_multijob_dedup_barrier_posix.json  (+77 more)
workloads/fio/: 01_nop_baseline_posix.fio  01_seq_read_posix.fio  01_seq_write_posix.fio  02_seq_read_posix.fio  02_seq_write_posix.fio  03_rand_read_posix.fio  03_seq_write_large_block_posix.fio  03_seq_write_posix.fio  04_rand_read_posix.fio  04_rw_rand_mixed_posix.fio  05_rw_rand_mixed_posix.fio  05_rw_zipf_posix.fio  06_rw_zipf_posix.fio  06_write_heavy_seq_posix.fio  07_seq_write_large_block_posix.fio  07_write_heavy_seq_posix.fio  08_barrier_fsync_posix.fio  08_seq_write_large_block_posix.fio  09_barrier_fsync_posix.fio  09_rw_rand_multijob_posix.fio  10_compress_zipf_posix.fio  10_rw_rand_multijob_posix.fio  11_compress_zipf_posix.fio  11_dedup_zipf_posix.fio  12_dedup_zipf_posix.fio  12_hybrid_trace_access_posix.fio  13_hybrid_trace_access_posix.fio  13_hybrid_trace_ops_posix.fio  14_hybrid_trace_ops_posix.fio  14_trace_homes_posix.fio  15_trace_homes_posix.fio  15_trace_webmail_posix.fio  16_seq_read_uring.fio  16_seq_write_uring.fio  16_trace_webmail_posix.fio  17_nop_baseline_uring.fio  17_seq_read_uring.fio  17_seq_write_uring.fio  18_rand_read_uring.fio  18_seq_read_uring.fio  (+107 more)
workloads/prismo/: 01_nop_baseline_posix.json  01_seq_read_posix.json  01_seq_write_posix.json  02_seq_read_posix.json  02_seq_write_posix.json  03_rand_read_posix.json  03_seq_write_large_block_posix.json  03_seq_write_posix.json  04_rand_read_posix.json  04_rw_rand_mixed_posix.json  05_rw_rand_mixed_posix.json  05_rw_zipf_posix.json  06_rw_zipf_posix.json  06_write_heavy_seq_posix.json  07_seq_write_large_block_posix.json  07_write_heavy_seq_posix.json  08_barrier_fsync_posix.json  08_seq_write_large_block_posix.json  09_barrier_fsync_posix.json  09_rw_rand_multijob_posix.json  10_compress_zipf_posix.json  10_rw_rand_multijob_posix.json  11_compress_zipf_posix.json  11_dedup_zipf_posix.json  12_dedup_zipf_posix.json  12_hybrid_trace_access_posix.json  13_hybrid_trace_access_posix.json  13_hybrid_trace_ops_posix.json  14_hybrid_trace_ops_posix.json  14_trace_homes_posix.json  15_trace_homes_posix.json  15_trace_webmail_posix.json  16_seq_read_uring.json  16_seq_write_uring.json  16_trace_webmail_posix.json  17_nop_baseline_uring.json  17_seq_read_uring.json  17_seq_write_uring.json  18_rand_read_uring.json  18_seq_read_uring.json  (+107 more)
workloads/runner/: prismo.sh
workloads/spdk/: spdk_bdev.json
workloads/vdbench/: 01_nop_baseline_posix.vdbench  01_seq_read_posix.vdbench  01_seq_write_posix.vdbench  02_seq_read_posix.vdbench  02_seq_write_posix.vdbench  03_rand_read_posix.vdbench  03_seq_write_large_block_posix.vdbench  03_seq_write_posix.vdbench  (+139 more)
(+111 files in other folders)
