[project]
name = "prismo-tools-scripts"
version = "0.1.0"
description = "Analysis scripts for Prismo benchmark logs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib==3.10.8",
  "numpy==2.4.1",
  "pandas==2.3.3",
  "seaborn==0.13.2",
  "tabulate==0.9.0",
  "tqdm==4.67.1",
]

[tool.uv]
package = false
